src/css/main.css
.navbar {
    background-color: #34495E;
    padding: 1rem 1rem!important;
}

.nav-link, .navbar-brand, .learn-more {
    color: #ffffff!important;
}
.nav-link {
    margin-right: 1em;
}

.navbar-brand {
    margin-left: 1em;
}

.navbar-toggler {
    border-color: transparent!important;
}

body {
    font-family: Raleway;
}

.hero-landing {
    color: #ffffff;
    background-color: #34495E;
    height: 100%;
}

.hero-context > h1 {
    padding-top: 2em;
    font-weight: 700;
    font-size: 36px;
    margin-top: 1em;
}

.page-scroll {
    margin-top: 5em;
    margin-bottom: 1em;
    text-align: center;
}

.profile-pic {
    border-radius: 50%;
    width: 60%;
    margin: auto;
    margin-bottom: 2em;
}

.about, .skills, footer {
    padding: 3em 0;
    text-align: center;
    height: 100%;
}

/*.about-content, .skills-content {*/
    /*margin: 1em 0;*/
/*}*/

.about-section, .skills-section {
    margin: 2em 0;
}

.skills {
    background-color: #EDEEF0;
    width: 100%;
}

.about-icon {
    margin: 0.5em;
}

.full-bar {
    height: 1em;
    width: 100%;
    background-color: #99A4AE;
    margin-top: 0.25em;
    margin-bottom: 1.5em;
}

.progress-bar {
    background-color: #34495E;
}

h3 {
    margin-bottom: 2em;
    text-align: left;
}

a:link, a:hover, a:active {
    text-decoration: none;
    color: #c0dfd9!important;
    /*color: #729f98!important;*/
}

/*.technical-skills {*/
    /*margin-left: 2em;*/
/*}*/


/*.second-skills {*/
    /*margin-top: 5em;*/
/*}*/

/*.second-course {*/
    /*margin-top: 6em;*/
/*}*/

.course {
    margin-top: 0.25em;
    margin-bottom: 1.5em;
    border: solid #34495E 3px;
    height: 4.5em;
    padding: 1em;
}

.contact {
    font-size: 1.5em;
}
.social-link a {
    font-size: 1em;
    color: #ffffff;
    margin-top: 0.25em;
    display: inline-block;
}

.social-link {
    display: inline-block;
    background-color: #34495E;
    height: 2em;
    width: 2em;
    border-radius: 50%;
    margin: 1em;
}


.project-landing {
    height: 100%;
    width: 100%;
}

.project-item {

}

@media (min-width: 598px) {
    .about-icon {
        width: 75%;
        padding-top: 1em;
        display: inline;
    }

    .second-skills, .second-course {
        margin-top: 0;
    }

    .social-link a {
        font-size: 1.5em;
        margin-top: 0.1em;
    }

    .social-link {
        height: 2.5em;
        width: 2.5em;
    }
}

@media (min-width: 768px) {
    .hero-context > h1 {
        font-size: 48px;
    }

    .second-skills {
        margin-top: 5em;
    }

    .profile-pic {
        width: 90%;
    }

    .second-course {
        margin-top: 5em;
    }

    .course {
        height: 4.5em;
    }

    .full-bar {
        width: 100%;
    }


}


@media (min-width: 992px) {
    .about-text {
        width: 75%;
        margin: auto;
        padding-top: 0.5em;
    }

    .course {
        height: 4em;
    }

}

@media (min-width: 1200px) {
    .hero-context > h1 {
        font-size: 60px;
    }

    .hero-context > p {
        font-size: 24px;
    }
}

